--- a/picGallery/final/plugins/pic-gallery/jquery.gallery.css
+++ b/picGallery/final/plugins/pic-gallery/jquery.gallery.css
@@ -40,7 +40,7 @@
 	box-shadow: 2px 2px 4px 0px black;
 	/* Chrome 6+, Firefox 4+, IE 9+, iOS 5+, Opera 10.50+ */
 	cursor: pointer;
-	height: 100%;
+	height: 95%;
 	width: 100%;
 	min-width: 120px;
 	max-width: 160px;
